--- a/scss/contact-section.scss
+++ b/scss/contact-section.scss
@@ -4,12 +4,16 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    &__fg-big-box {
+        display: flex;
+        width: 100%;
+    }
     &__details-title {
         font-family: 'ralewaybold';
         font-size: 90px;
         color: #262626;
         text-align: center;
-         padding-top: 99px;
+        padding-top: 99px;
         margin: 0 auto;
         display: block;
     }
@@ -23,13 +27,14 @@
         text-align: center;
     }
     &__form {
+        width: 50%;
         margin-top: 50px;
         margin-bottom: 100px;
-        margin-left: 70px;
-        display: inline-block;
+        margin-left: 10px;
+        margin-right: 50px;
     }
     &__name-input {
-        width: 400px;
+        width: 100%;
         height: 50px;
         margin-top: 15px;
         margin-bottom: 15px;
@@ -43,14 +48,13 @@
         padding-left: 15px;
         &::placeholder {
             color: #ffffff;
-            
         }
         &:focus {
-          border-left: 3px solid #355b82;  
+            border-left: 3px solid #355b82;
         }
     }
     &__email-input {
-        width: 400px;
+        width: 100%;
         height: 50px;
         margin-top: 15px;
         margin-bottom: 15px;
@@ -66,11 +70,11 @@
             color: #ffffff;
         }
         &:focus {
-          border-left: 3px solid #355b82;  
+            border-left: 3px solid #355b82;
         }
     }
     &__number-input {
-        width: 400px;
+        width: 100%;
         height: 50px;
         margin-top: 15px;
         margin-bottom: 15px;
@@ -86,11 +90,11 @@
             color: #ffffff;
         }
         &:focus {
-          border-left: 3px solid #355b82;  
+            border-left: 3px solid #355b82;
         }
     }
     &__textarea {
-        width: 400px;
+        width: 100%;
         margin-top: 15px;
         margin-bottom: 15px;
         color: #ffffff;
@@ -108,17 +112,18 @@
             color: #ffffff;
         }
         &:focus {
-          border-left: 3px solid #355b82;  
+            border-left: 3px solid #355b82;
         }
     }
     &__info {
+        width: 45%;
         margin-top: 50px;
         padding-top: 0;
-        margin-left: 172px;
-        display: inline-block;
+        margin-left: 50px;
+        margin-right: 10px;
     }
     &__info-titles {
-        color: #262626; 
+        color: #262626;
         font-family: 'ralewaybold';
         font-size: 17px;
         text-align: left;
@@ -134,143 +139,30 @@
         margin-bottom: 5px;
     }
 }
-@media only screen and (min-device-width: 360px) and (max-device-width: 1024px) {
-   .contact-section {
-    width: 100%;
-    background-image: url(../images/contachbg.png);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    &__details-title {
-        font-family: 'ralewaybold';
-        font-size: 90px;
-        color: #262626;
-        text-align: center;
-         padding-top: 99px;
-        margin: 0 auto;
-        display: block;
+
+// Media Queries
+// tablets
+@media screen and (max-width: 768px) {
+    .contact-section {
+       &__fg-big-box {
+        display: flex;
+        width: 100%;
     }
-    &__details-text {
-        margin: 0 auto;
-        width: 390px;
-        font-family: 'ralewaylight';
-        line-height: 25px;
-        font-size: 17px;
-        color: #262626;
-        text-align: center;
+     &__info {
+        width: 45%;
+        margin-top: 50px;
+        padding-top: 0;
+        margin-left: 50px;
+        margin-right: 10px;
     }
-    &__form {
+     &__form {
+        width: 50%;
         margin-top: 50px;
         margin-bottom: 100px;
+        margin-left: 10px;
         margin-right: 50px;
-        margin-left: 70px;
-        display: inline-block;
     }
-    &__name-input {
-        width: 400px;
-        height: 50px;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        color: #ffffff;
-        background-color: #00c4c4;
-        border: none;
-        border-left: 3px solid transform;
-        outline: none;
-        display: block;
-        padding-left: 15px;
-        padding-right: 15px;
-        &::placeholder {
-            color: #ffffff;
-            
-        }
-        &:focus {
-          border-left: 3px solid #355b82;  
-        }
     }
-    &__email-input {
-        width: 400px;
-        height: 50px;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        color: #ffffff;
-        background-color: rgba(0, 196, 196, .5);
-        border: none;
-        border-left: 3px solid transform;
-        outline: none;
-        display: block;
-        padding-right: 15px;
-        padding-left: 15px;
-        &::placeholder {
-            color: #ffffff;
-        }
-        &:focus {
-          border-left: 3px solid #355b82;  
-        }
-    }
-    &__number-input {
-        width: 400px;
-        height: 50px;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        color: #ffffff;
-        background-color: rgba(0, 196, 196, .5);
-        border: none;
-        border-left: 3px solid transform;
-        outline: none;
-        display: block;
-        padding-right: 15px;
-        padding-left: 15px;
-        &::placeholder {
-            color: #ffffff;
-        }
-        &:focus {
-          border-left: 3px solid #355b82;  
-        }
-    }
-    &__textarea {
-        width: 400px;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        color: #ffffff;
-        background-color: rgba(0, 196, 196, .5);
-        border: none;
-        border-left: 3px solid transform;
-        transition: all .4 ease;
-        outline: none;
-        display: block;
-        padding-top: 15px;
-        padding-bottom: 15px;
-        padding-right: 15px;
-        padding-left: 15px;
-        &::placeholder {
-            color: #ffffff;
-        }
-        &:focus {
-          border-left: 3px solid #355b82;  
-        }
-    }
-    &__info {
-        margin-top: 50px;
-        padding-top: 0;
-        margin-right: 50px;
-        margin-left: 70px;
-        display: inline-block;
-    }
-    &__info-titles {
-        color: #262626; 
-        font-family: 'ralewaybold';
-        font-size: 17px;
-        text-align: left;
-        margin-top: 15px;
-        margin-bottom: 5px;
-    }
-    &__info-text {
-        color: #262626;
-        font-size: 17px;
-        font-family: 'ralewaylight';
-        text-align: left;
-        margin-top: 5px;
-        margin-bottom: 5px;
-    }
-} 
 }
+// mobiles
+@media screen and (max-width: 480px) {}
