--- a/scss/footer-section.scss
+++ b/scss/footer-section.scss
@@ -6,18 +6,18 @@
     	justify-content: space-between;	
     }
     &__flex-container-copyright {
-    	width: 271px;
+    	width: 40%;
     	height: 45px;
-        margin-left: 70px;
+        text-align: center;
     }
     &__flex-container-logo {
-    	width: 45px;
+    	width: 5.5%;
     	height: auto;
     }
     &__flex-container-madewithlove {
-    	width: 271px;
+    	width: 35%;
     	height: 45px;
-        margin-left: 160px;
+        text-align: center;
     }
     &__paragraph {
     	color: #4d4d4d;
@@ -40,3 +40,27 @@
     	font-size: 16px;	
     }
 }
+
+// Media Queries
+// tablets
+@media screen and (max-width: 768px) {
+    .footer-section {
+       &__paragraph {
+        color: #ffffff;
+        font-family: 'ralewaylight';
+        font-size: 17px;
+    }
+    &__text {
+       color: #ffffff;
+       font-family: 'ralewaylight';
+       font-size: 17px;
+    }
+    &__span {
+        color: #ff2b58;
+        font-family: sans-serif;
+        font-size: 17px;    
+    } 
+    }
+}
+// mobiles
+@media screen and (max-width: 480px) {}
